--- a/layouts/cards.yml
+++ b/layouts/cards.yml
@@ -163,6 +163,12 @@ dev:
   x: 75
   y: 825
 
+type_icon:
+  width: 75
+  height: 75
+  x: 75
+  y: 150
+
 desc_text:
   font: Times New Roman,serif 9
   # hint: red
